--- a/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/Index.cshtml
+++ b/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/Index.cshtml
@@ -1,7 +1,11 @@
+@using Microsoft.AspNetCore.Identity
+@using App.Models
+@inject UserManager<AppUser> UserManager
 @{
     ViewData["Title"] = "Đấu Thầu";
     Layout =  "/Views/Shared/_Layout.cshtml";
-    
+    @* var Product = ViewBag.product as App.Models.Product.ProductModel; *@
+    var _User = ViewBag.User as App.Models.AppUser;
 }
 <!DOCTYPE html>
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
@@ -23,7 +27,17 @@ $(function ()
     });  
 })  
 </script>
+@* <script> //truyền input của hskhac dưới dạng pdf
+function updateHSKhac(input) {
+    // Lấy tên tệp từ input file
+    var fileName = input.files[0].name;
 
+    // Gán tên tệp vào thuộc tính HSKhac
+    document.getElementById("HSKhac").value = fileName;
+}
+</script> *@
+
+</script>
 <script type="text/javascript" src="/TSPD/082d638fd6ab200068afd070d0c9498d3735077bd154b5d710f1da71d0c0218eaa4a750574ff5251?type=17"></script>
 
     <!-- Meta -->
@@ -103,7 +117,7 @@ $(function ()
             <div class="form-group">
                 <label class="control-label col-md-6" style="text-align:left;">Tên dự toán mua sắm(*): </label>
                 <div class="col-md-6">
-                    <input class="form-control" type="text" value="@(ViewBag.Product.Title ?? String.Empty)" name="Ten">
+                    <input class="form-control" type="text" value="@(ViewBag.Product.Title ?? String.Empty)" name="Ten" readonly="readonly">
                 </div>
             </div>
         </div>
@@ -111,7 +125,7 @@ $(function ()
             <div class="form-group">
                 <label class="control-label col-md-6" style="text-align:left;">Năm(*): </label>
                 <div class="col-md-6">
-                    <input class="form-control" type="text" value="2023" name="Nam">
+                    <input class="form-control" type="text" value="2023" name="Nam" readonly="readonly">
                 </div>
             </div>
         </div>
@@ -119,16 +133,16 @@ $(function ()
     <div class="col-md-12 col-xs-12">
         <div class="col-md-6" style="padding-right:10px;">
             <div class="form-group">
-                <label class="control-label col-md-6" style="text-align:left;">Phân loại (*): </label>
+                <label class="control-label col-md-6" style="text-align:left;" >Phân loại (*): </label>
                 <div class="col-md-6">
-                    <select id="PhanLoai" name="PhanLoai" class="form-control">
+                    <select id="PhanLoai" name="PhanLoai" class="form-control" readonly="readonly">
                             <option value="0">Chọn phân loại</option>
-                        <option value="1" selected=&quot;selected&quot;>Hàng hóa thông thường</option>
-                        <option value="2" >Máy móc,linh kiện</option>
-                        <option value="3" >Vật tư</option>
-                        <option value="4" >Hóa chất</option>
-                        <option value="5" >Dịch vụ</option>
-                        <option value="6" >Thuốc</option>
+                        <option value="1" readonly="readonly" selected=&quot;selected&quot;>Hàng hóa thông thường</option>
+                        <option value="2" readonly="readonly" >Máy móc,linh kiện</option>
+                        <option value="3" readonly="readonly" >Vật tư</option>
+                        <option value="4" readonly="readonly" >Hóa chất</option>
+                        <option value="5" readonly="readonly">Dịch vụ</option>
+                        <option value="6" readonly="readonly" >Thuốc</option>
                     </select>
                 </div>
             </div>
@@ -137,7 +151,7 @@ $(function ()
             <div class="form-group">
                 <label class="control-label col-md-6" style="text-align:left;">Người liên hệ (*): </label>
                 <div class="col-md-6">
-                    <input class="form-control" type="text" value=""  name="NguoiLH">
+                    <input class="form-control" type="text" value="@(_User.NormalizedUserName ?? String.Empty)"  name="NguoiLH">
                 </div>
             </div>
         </div>
@@ -147,7 +161,7 @@ $(function ()
             <div class="form-group">
                 <label class="control-label col-md-6" style="text-align:left;">Điện thoại liên hệ (*): </label>
                 <div class="col-md-6">
-                    <input class="form-control" type="text" value=" "  name="DT">
+                    <input class="form-control" type="text" value="@(_User.PhoneNumber ?? String.Empty)"  name="DT">
                 </div>
             </div>
         </div>
@@ -155,7 +169,7 @@ $(function ()
             <div class="form-group">
                 <label class="control-label col-md-6" style="text-align:left;">Email liên hệ  (*): </label>
                 <div class="col-md-6">
-                    <input class="form-control" type="text" value=""  name="Email">
+                    <input class="form-control" type="text" value="@(_User.Email ?? String.Empty)"  name="Email">
                 </div>
             </div>
         </div>
@@ -207,7 +221,7 @@ $(function ()
                 </div>
             </div>
         </div> 
-    <div class="col-md-12 col-xs-12">
+        <div class="col-md-12 col-xs-12">
         <div class="col-md-6" style="padding-right: 10px;">
         <div class="form-group">
             <label class="control-label col-md-6" for="NgayCapNhat" style="text-align:left;">Ngày (*): </label>
@@ -277,7 +291,7 @@ $(function ()
         </div>
     </div>
      @*Upload ZIP*@
-    @* <div class="col-md-12 col-xs-12">
+    <div class="col-md-12 col-xs-12">
         <div class="col-md-6" style="padding-right:10px;">
             <div class="form-group">
                 <label class="control-label col-md-6" for="FileZipDinhKem" style="text-align:left;">File hồ sơ kỹ thuật, file kh&#225;c (.zip): </label>
@@ -290,11 +304,14 @@ $(function ()
         </div>
         <div class="col-md-6" style="padding-right:10px;">
             <div class="form-group">
-                <input type="file" id="fileUploadZip" accept="application/zip,application/x-zip,application/x-zip-compressed" class="form-control" />
+                <input type="file" id="fileUploadZip" accept='application/vnd.openxmlformats-officedocument.spreadsheetml.sheet' class="form-control" />
             </div>
+            @* <div class="form-group">
+                <input type="file" id="fileUploadZip" accept="application/zip,application/x-zip,application/x-zip-compressed" class="form-control" />
+            </div> *@
         </div>
-    </div> *@
-     <div class="col-md-12 col-xs-12">
+    </div>
+     @* <div class="col-md-12 col-xs-12">
         <div class="col-md-6" style="padding-right:10px;">
             <div class="form-group">
                 <label class="control-label col-md-6" for="FileScanBaoGiaDongDau" style="text-align:left;">File hồ sơ kỹ thuật, file kh&#225;c (.zip):(*): </label>
@@ -312,7 +329,27 @@ $(function ()
             </div>
         </form>
     </div>
+    </div> *@
+    @* <div class="col-md-12 col-xs-12">
+    <div class="col-md-6" style="padding-right:10px;">
+        <div class="form-group">
+            <label class="control-label col-md-6" for="FileScanBaoGiaDongDau" style="text-align:left;">File hồ sơ kỹ thuật, file kh&#225;c (.zip):(*): </label>
+            <div class="col-md-6">
+                <input class="form-control" data-val="true" data-val-required="Bắt buộc nhập" id="HSKhac" name="HSKhac" readonly="readonly" type="text" value="" />
+                <span class="field-validation-valid" data-valmsg-for="FileScanBaoGiaDongDau" data-valmsg-replace="true"></span>
+            </div>
+        </div>
     </div>
+    <div class="col-md-6" style="padding-right:10px;">
+        <form enctype="multipart/form-data" action="/api/PdfUpload/upload" method="post">
+            <div class="form-group">
+                <input type="file" name="pdfFile" accept="application/pdf" class="form-control" id="fileUploadPdf" onchange="updateHSKhac(this)">
+            </div>
+        </form>
+    </div>
+</div> *@
+
+
     
     <div class="col-md-12 col-xs-12">
         <table class="table" id="FilesList" border="1">
@@ -475,6 +512,26 @@ $(function ()
     document.getElementById("fileUploadPdf").addEventListener("change", function () { //fileUpload
         var fileInput = document.getElementById("fileUploadPdf");
         var fileNameDisplay = document.getElementById("BangBaoGia");
+
+        if (fileInput.files.length > 0) {
+            fileNameDisplay.value = fileInput.files[0].name;
+        } else {
+            fileNameDisplay.value = "";
+        }
+    });
+    document.getElementById("fileUploadXLS").addEventListener("change", function () { //fileUpload
+        var fileInput = document.getElementById("fileUploadXLS");
+        var fileNameDisplay = document.getElementById("FileBaoGia");
+
+        if (fileInput.files.length > 0) {
+            fileNameDisplay.value = fileInput.files[0].name;
+        } else {
+            fileNameDisplay.value = "";
+        }
+    });
+    document.getElementById("fileUploadZip").addEventListener("change", function () { //fileUpload
+        var fileInput = document.getElementById("fileUploadZip");
+        var fileNameDisplay = document.getElementById("HSKhac");
 
         if (fileInput.files.length > 0) {
             fileNameDisplay.value = fileInput.files[0].name;
@@ -651,13 +708,6 @@ $(function ()
                     contentType: false,
                     success: function (data) {
                         var str = "";
-                        $('#FileBaoGia').val(data);
-                        console.log('FileBaoGia: ' + $('#FileBaoGia').val());
-                        for (var i = 0; i < data.length; i++) {
-                            str += "<img src='" + data[i] + "' height='100' width='100'>"
-                        }
-
-                        $(".file-upload-container").append(str);
                     },
                     error: function (data) {
                         alert("Upload Failed!");
@@ -675,13 +725,8 @@ $(function ()
                     contentType: false,
                     success: function (data) {
                         var str = "";
-                        $('#FileZipDinhKem').val(data);
-                        console.log('FileZipDinhKem: ' + $('#FileZipDinhKem').val());
-                        for (var i = 0; i < data.length; i++) {
-                            str += "<img src='" + data[i] + "' height='100' width='100'>"
-                        }
+                        @* $('#HSKhac').val(data); *@
                         
-                        $(".file-upload-container").append(str);
                     },
                     error: function (data) {
                         alert("Upload Failed!");
