--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -14,9 +14,9 @@
 </html>
 <partial name="_AlertMessage" />
 
-<h2>Tin tức</h2>
+@* <h2>Tin tức</h2> *@
 
-@foreach (var post in posts)
+@* @foreach (var post in posts)
 {
     <div class="media border-bottom mb-3 pb-3">
         <img src="/contents/nophoto.png" class="mr-3" style="width: 0px">
@@ -39,8 +39,8 @@
             </div>
         </div>
     </div>
-}   
-<h2>Các dự án</h2>
+}    *@
+@* <h2>Các dự án</h2> *@
 <div class="d-flex flex-wrap justify-content-between">
     @foreach (var product in products)
     {   
