--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -110,9 +110,9 @@ function IS(z){var s=+new Date,_;!document[I(90,203,207,191,204,211,173,191,198,
 </style>
 <div class="DropdownMenu">
     <ul class="MenuList">
-        <li class="TopMenuActive" style="display:block"><a href="/" class="HasChildren"><img src="https://storage-vnportal.vnpt.vn/sme-g1/sitefolders/ttytykdemo/4716/banner/homepng.png" class="image"><span class="trang-chu-59130">Trang chủ</span></a>
-        <li class="TopMenu" style="display:block"><a asp-area="Blog" asp-controller="ViewPost" asp-action="Index" class="HasChildren"><span class="tin-tuc-59175">Tin tức</span></a>
-        <li class="TopMenu" style="display:block"><a asp-area="Product" asp-controller="ViewProduct" asp-action="Index" class="HasChildren"><span class="van-ban-59181">Dự án</span></a>
+        <li class="TopMenuActive" style="display:block"><a href="https://ttytvungtau-soyte.baria-vungtau.gov.vn/" class="HasChildren"><img src="https://storage-vnportal.vnpt.vn/sme-g1/sitefolders/ttytykdemo/4716/banner/homepng.png" class="image"><span class="trang-chu-59130">Trang chủ</span></a>
+        @* <li class="TopMenu" style="display:block"><a asp-area="Blog" asp-controller="ViewPost" asp-action="Index" class="HasChildren"><span class="tin-tuc-59175">Tin tức</span></a> *@
+        <li class="TopMenu" style="display:block"><a asp-area="Product" asp-controller="ViewProduct" asp-action="Index" class="HasChildren"><span class="van-ban-59181">Thông Tin Đấu Thầu</span></a>
         @* <li class="TopMenu" style="display:block"><a  asp-area="ThongTinNhaThau" asp-controller="/trangthongtin" >Trang đấu thầu</a> *@
         @* <li class="TopMenu" style="display:block"><a  asp-area="Contact" asp-controller="Contact" asp-action="SendContact" class="HasChildren"><span class="lien-he-hoi-dap-59171">Liên hệ - Hỏi đáp</span></a> *@
        @* <li class="TopMenu" style="display:block"><a href="/goc-hoc-tap" class="HasChildren"><span class="goc-hoc-tap-59191">Góc học tập</span></a> *@
@@ -174,7 +174,7 @@ function IS(z){var s=+new Date,_;!document[I(90,203,207,191,204,211,173,191,198,
     });
 </script></td><td id="2" valign="top" resizable="true" style="width:9px;"></td><td id="3" valign="top">
 <div class="MultiFunctionControl">
-    <marquee behavior="scroll" direction="left"><span"><strong><span style="line-height: 43px; font-size: 13px; color: #ce1126;">VNPT-VNCare</span></strong></span"></marquee>
+    <marquee behavior="scroll" direction="left"><span"><strong><span style="line-height: 43px; font-size: 13px; color: #ce1126;">Văn Minh-Thân Thiện</span></strong></span"></marquee>
 </div>
 </td></tr></tbody></table></div></div>
 
