--- a/Areas/Product/Views/ProductManage/Index.cshtml
+++ b/Areas/Product/Views/ProductManage/Index.cshtml
@@ -58,7 +58,7 @@
                 @Html.DisplayFor(modelItem => item.Published)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Author.UserName)
+                @Html.DisplayFor(modelItem => item.Author)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DateUpdated)
