--- a/Areas/Product/Views/ViewProduct/Detail.cshtml
+++ b/Areas/Product/Views/ViewProduct/Detail.cshtml
@@ -11,7 +11,7 @@
 
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="~/">Home</a></li>
+    <li class="breadcrumb-item"><a href="https://ttytvungtau-soyte.baria-vungtau.gov.vn/">Home</a></li>
     @if  (category != null)
     {
         var li = category.ListParents();
@@ -66,7 +66,7 @@
 
 
 
-@section Sidebar {
+@* @section Sidebar {
     @await Component.InvokeAsync("App.Components.CategoryProductSidebar", 
         new CategoryProductSidebar.CategorySidebarData()
         {
@@ -85,4 +85,4 @@
         </li>
     }
 </ul>    
-}
+} *@
