--- a/Areas/Product/Views/ViewProduct/Index.cshtml
+++ b/Areas/Product/Views/ViewProduct/Index.cshtml
@@ -5,12 +5,12 @@
     List<CategoryProduct> categories = ViewBag.categories as List<CategoryProduct>;
     CategoryProduct category = ViewBag.category as CategoryProduct;  
     ViewData["Title"] = (category != null) ? category.Title : 
-                        "Tất cả dự án";
+                        "Thông Báo Mời Chào Giá Thầu";
 }
 
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="~/">Home</a></li>
+    @* <li class="breadcrumb-item"><a href="https://ttytvungtau-soyte.baria-vungtau.gov.vn/">Trang Chủ</a></li> *@
     @if  (category != null)
     {
         var li = category.ListParents();
@@ -33,7 +33,7 @@
 }
 else
 {
-    <p>Toàn bộ sản phẩm trong tất cả danh mục...</p>
+    <p></p>
 }
 <hr>
 <div class="d-flex flex-wrap justify-content-between">
@@ -69,7 +69,7 @@ else
     }
 </div>
 
-@section Sidebar {
+@* @section Sidebar {
     @await Component.InvokeAsync("App.Components.CategoryProductSidebar", 
         new CategoryProductSidebar.CategorySidebarData()
         {
@@ -77,7 +77,7 @@ else
             level = 0,
             categoryslug = ViewBag.categoryslug
         })
-}
+} *@
 
 
 <partial name="_PagingXTL" model="@ViewBag.pagingModel" />
