--- a/Areas/Product/Views/ViewProduct/_LayoutProduct.cshtml
+++ b/Areas/Product/Views/ViewProduct/_LayoutProduct.cshtml
@@ -3,11 +3,11 @@
 }
 
 <div class="row">
-    <div class="col-md-3">
+    @* <div class="col-md-3">
         @RenderSection("Sidebar", false)
-    </div>
+    </div> *@
 
-    <div class="col-md-9">
+    <div class="col-md-12">
         @RenderBody()
     </div>
 
