--- a/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/dsNhaThau.cshtml
+++ b/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/dsNhaThau.cshtml
@@ -82,5 +82,6 @@
 }
 
 
- <a href="/exporttoexcel/" class="btn btn-primary" >Xuất file excel </a>  
+ @* <a href="/exporttoexcel/" class="btn btn-primary" >Xuất file excel </a>   *@
+<a href="https://comtamvungtau.com/admincp "class="btn btn-primary"><span class="glyphicon glyphicon-arrow-left"></span> Trang chủ</a>
 
