--- a/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/Details1.cshtml
+++ b/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/Details1.cshtml
@@ -115,15 +115,7 @@
             <div class="form-group">
                 <label class="control-label col-md-6" style="text-align:left;">Phân loại (*): </label>
                 <div class="col-md-6">
-                    <select id="PhanLoai" name="PhanLoai" class="form-control" readonly="readonly">
-                            <option value="0">Chọn phân loại</option>
-                        <option value="1" selected=&quot;selected&quot;>Hàng hóa thông thường</option>
-                        <option value="2" >Máy móc,linh kiện</option>
-                        <option value="3" >Vật tư</option>
-                        <option value="4" >Hóa chất</option>
-                        <option value="5" >Dịch vụ</option>
-                        <option value="6" >Thuốc</option>
-                    </select>
+                     <input class="form-control" type="text" value="@ThongTinNhaThauData.PhanLoai" name="PhanLoai" readonly="readonly">
                 </div>
             </div>
         </div>
@@ -229,9 +221,9 @@
             <div class="form-group">
                 <label class="control-label col-md-6" for="FileScanBaoGiaDongDau" style="text-align:left;">File scan b&#225;o gi&#225;, c&#243; k&#253; t&#234;n, đ&#243;ng dấu (*): </label>
                 <div class="col-md-6">
-                    <input class="form-control" data-val="true" data-val-required="Bắt buộc nhập" id="FileBaoGia" name="FileBaoGia" readonly="readonly" type="text" value="@DanhSachThau.FileBaoGia" readonly="readonly" />
+                    <input class="form-control" data-val="true" data-val-required="Bắt buộc nhập" id="FileBaoGia" name="FileBaoGia" readonly="readonly" type="text" value="@DanhSachThau.FileBaoGia" readonly="readonly"  />
                     <span class="field-validation-valid" data-valmsg-for="FileScanBaoGiaDongDau" data-valmsg-replace="true"></span>
-
+                    
                 </div>
             </div>
         </div>
@@ -243,6 +235,7 @@
         <a href="@pdf_fileUrl" class="btn btn-primary">Tải Xuống File</a>
        
     </div>
+    
     <div class="col-md-12 col-xs-12">
         <div class="col-md-6" style="padding-right:10px;">
             <div class="form-group">
@@ -288,10 +281,10 @@
     <div class="col-md-12 col-xs-12">
         <div class="col-md-6" style="padding-right:10px;">
             <div class="form-group">
-                <label class="control-label col-md-6" for="FileScanBaoGiaDongDau" style="text-align:left;">File hồ sơ kỹ thuật, file kh&#225;c (.zip):(*): </label>
+                <label class="control-label col-md-6" for="FileZipDinhKem" style="text-align:left;">File hồ sơ kỹ thuật, file kh&#225;c (.zip):(*): </label>
                 <div class="col-md-6">
                     <input class="form-control" data-val="true" data-val-required="Bắt buộc nhập" id="HSKhac" name="HSKhac" readonly="readonly" type="text" value="@DanhSachThau.HSKhac" />
-                    <span class="field-validation-valid" data-valmsg-for="FileScanBaoGiaDongDau" data-valmsg-replace="true"></span>
+                    <span class="field-validation-valid" data-valmsg-for="FileZipDinhKem" data-valmsg-replace="true"></span>
 
                 </div>
             </div>
@@ -315,7 +308,8 @@
 
     <div class="form-group">
         <div class="col-md-offset-4 col-md-8">
-            <a href="/sort/" class="btn btn-primary" >Cập Nhật  </a>   
+            <a href="/sort/" class="btn btn-primary" >Cập Nhật  </a>  
+            <a href="https://comtamvungtau.com/dsNhaThau "class="btn btn-primary">Trở về Danh Sách Nhà Thầu</a> 
         </div>
     </div>
 </div>
