--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -24,7 +24,9 @@ body {
   
   /* Vertically center the text there */
 }
-
+.UIClockSystem {
+  font-size: 12px;
+}
 
 .app-navbar .text-dark {
   color: #b9c3ce !important;
@@ -148,12 +150,13 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 95%;
   z-index: -1;
   
 }
-
-
+.border-bottom {
+  border-bottom: 0px solid #dee2e6!important;
+}
 
 .TopBar {
   background: #eee none repeat scroll 0 0;
