--- a/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/Details1.cshtml
+++ b/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/Details1.cshtml
@@ -221,7 +221,7 @@
             <div class="form-group">
                 <label class="control-label col-md-6" for="FileScanBaoGiaDongDau" style="text-align:left;">File scan b&#225;o gi&#225;, c&#243; k&#253; t&#234;n, đ&#243;ng dấu (*): </label>
                 <div class="col-md-6">
-                    <input class="form-control" data-val="true" data-val-required="Bắt buộc nhập" id="FileBaoGia" name="FileBaoGia" readonly="readonly" type="text" value="@DanhSachThau.FileBaoGia" readonly="readonly"  />
+                    <input class="form-control" data-val="true" data-val-required="Bắt buộc nhập" id="FileBaoGia" name="FileBaoGia" readonly="readonly" type="text" value="@DanhSachThau.BangBaoGia" readonly="readonly"  />
                     <span class="field-validation-valid" data-valmsg-for="FileScanBaoGiaDongDau" data-valmsg-replace="true"></span>
                     
                 </div>
@@ -241,7 +241,7 @@
             <div class="form-group">
                 <label class="control-label col-md-6" for="BangBaoGia" style="text-align:left;">Bảng ch&#224;o gi&#225; của nh&#224; thầu (*): </label>
                 <div class="col-md-6">
-                    <input class="form-control" data-val="true" data-val-required="Bắt buộc nhập" id="BangBaoGia" name="BangBaoGia" readonly="readonly" type="text" value="@DanhSachThau.BangBaoGia" readonly="readonly" />
+                    <input class="form-control" data-val="true" data-val-required="Bắt buộc nhập" id="BangBaoGia" name="BangBaoGia" readonly="readonly" type="text" value="@DanhSachThau.FileBaoGia" readonly="readonly" />
                     <span class="field-validation-valid" data-valmsg-for="FileBaoGia" data-valmsg-replace="true"></span>
                 </div>
             </div>
