--- a/Areas/Product/Views/ProductManage/Create.cshtml
+++ b/Areas/Product/Views/ProductManage/Create.cshtml
@@ -27,11 +27,11 @@
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
+            @* <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
+            </div> *@
 
 
             <div class="form-group">
@@ -63,6 +63,12 @@
                 <label asp-for="NguoiLH_DT" class="control-label"></label>
                 <textarea asp-for="NguoiLH_DT" class="form-control"></textarea>
                 <span asp-validation-for="NguoiLH_DT" class="text-danger"></span>
+            </div>
+             <div class="form-group">
+                <label asp-for="NguoiLH_BieuMau" class="control-label"></label>
+                <textarea asp-for="NguoiLH_BieuMau" class="form-control"></textarea>
+                <span asp-validation-for="NguoiLH_BieuMau" class="text-danger"></span>
+
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
