--- a/Areas/Product/Views/CategoryProduct/Delete.cshtml
+++ b/Areas/Product/Views/CategoryProduct/Delete.cshtml
@@ -2,7 +2,7 @@
 @using App.Menu
 @inject AdminSidebarService _AdminSidebarService
 @{
-    ViewData["Title"] = "Xóa chuyên mục";
+    ViewData["Title"] = "Xóa danh mục";
     Layout =  "/Views/Shared/_LayoutAdmin.cshtml";
 }
 
