--- a/Areas/Product/Views/CategoryProduct/Index.cshtml
+++ b/Areas/Product/Views/CategoryProduct/Index.cshtml
@@ -2,7 +2,7 @@
 @using App.Menu
 @inject AdminSidebarService _AdminSidebarService
 @{
-    ViewData["Title"] = "Chuyên mục Sản phẩm";
+    ViewData["Title"] = "Danh Mục Đấu Thầu";
     Layout =  "/Views/Shared/_LayoutAdmin.cshtml";
 }
 
