--- a/Areas/Product/Views/ProductManage/Delete.cshtml
+++ b/Areas/Product/Views/ProductManage/Delete.cshtml
@@ -2,7 +2,7 @@
 @using App.Menu
 @inject AdminSidebarService _AdminSidebarService
 @{
-    ViewData["Title"] = "Xóa sản phẩm";
+    ViewData["Title"] = "Xóa Dự Án Thầu";
     Layout =  "/Views/Shared/_LayoutAdmin.cshtml";    
 }
 
