--- a/Areas/Product/Views/ProductManage/Details.cshtml
+++ b/Areas/Product/Views/ProductManage/Details.cshtml
@@ -23,7 +23,7 @@
             @Html.DisplayFor(model => model.Slug)
         </dd>
         <dt class = "col-sm-2">
-           Giá sản phẩm
+           Giá Thầu
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Price)
