--- a/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/DanhSachNhaThau.cshtml
+++ b/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/DanhSachNhaThau.cshtml
@@ -87,3 +87,4 @@
 
 }
 <a href="/exporttoexcel/" class="btn btn-primary" >Xuất file excel </a>
+<a href="/dsNhaThau" class="btn btn-primary" >Trở về </a>
