--- a/Areas/Product/Views/CategoryProduct/Create.cshtml
+++ b/Areas/Product/Views/CategoryProduct/Create.cshtml
@@ -2,7 +2,7 @@
 @using App.Menu
 @inject AdminSidebarService _AdminSidebarService
 @{
-    ViewData["Title"] = "Tạo chuyên mục Blog";   
+    ViewData["Title"] = "Tạo danh mục Đấu Thầu";   
     Layout =  "/Views/Shared/_LayoutAdmin.cshtml";          
 }
 
@@ -16,7 +16,7 @@
             <div class="form-group">
                 <label asp-for="ParentCategoryId" class="control-label"></label>
                 <select asp-for="ParentCategoryId" class ="form-control" asp-items="ViewBag.ParentCategoryId"></select>
-            </div>            
+            </div>           
             
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -33,6 +33,7 @@
                 <input asp-for="Slug" class="form-control" />
                 <span asp-validation-for="Slug" class="text-danger"></span>
             </div>
+            
 
             <div class="form-group">
                 <input type="submit" value="Tạo mới" class="btn btn-primary" />
