--- a/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/Index.cshtml
+++ b/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/Index.cshtml
@@ -266,7 +266,7 @@ $(function ()
             <div class="form-group">
                 <label class="control-label col-md-6" for="FileScanBaoGiaDongDau" style="text-align:left;">File scan b&#225;o gi&#225;, c&#243; k&#253; t&#234;n, đ&#243;ng dấu (*): </label>
                 <div class="col-md-6">
-                    <input class="form-control" data-val="true" data-val-required="Bắt buộc nhập" id="BangBaoGia" name="BangBaoGia" readonly="readonly" type="text" value="" />
+                    <input class="form-control" data-val="true" data-val-required="Bắt buộc nhập" id="BangBaoGia" name="BangBaoGia"  type="text" value="" />
                     <span class="field-validation-valid" data-valmsg-for="FileScanBaoGiaDongDau" data-valmsg-replace="true"></span>
 
                 </div>
@@ -275,7 +275,7 @@ $(function ()
        <div class="col-md-6" style="padding-right:10px;">
         <form enctype="multipart/form-data" action="/api/PdfUpload/upload" method="post">
             <div class="form-group">
-                <input type="file" name="pdfFile" accept="application/pdf" class="" id="fileUploadPdf">
+                <input type="file" name="pdfFile" accept="application/pdf" class="" id="fileUploadPdf" >
                 
             </div>
         </form>
@@ -287,7 +287,7 @@ $(function ()
             <div class="form-group">
                 <label class="control-label col-md-6" for="FileBaoGia" style="text-align:left;">Bảng ch&#224;o gi&#225; của nh&#224; thầu (*): </label>
                 <div class="col-md-6">
-                    <input class="form-control" data-val="true" data-val-required="Bắt buộc nhập" id="FileBaoGia" name="FileBaoGia" readonly="readonly" type="text" value="" />
+                    <input class="form-control" data-val="true" data-val-required="Bắt buộc nhập" id="FileBaoGia" name="FileBaoGia"  type="text" value="" />
                     <span class="field-validation-valid" data-valmsg-for="FileBaoGia" data-valmsg-replace="true"></span>
 
                 </div>
@@ -302,7 +302,7 @@ $(function ()
         </div>
         <div class="col-md-4" style="padding-right:10px;">
             <div class="form-group">
-                <input type="file" id="fileUploadXLS" accept='application/vnd.openxmlformats-officedocument.spreadsheetml.sheet' class="" />
+                <input type="file" id="fileUploadXLS" accept='application/vnd.openxmlformats-officedocument.spreadsheetml.sheet' class=""  />
             </div>
         </div>
     </div>
@@ -312,7 +312,7 @@ $(function ()
             <div class="form-group">
                 <label class="control-label col-md-6" for="FileZipDinhKem" style="text-align:left;">File hồ sơ kỹ thuật, file kh&#225;c (.zip): </label>
                 <div class="col-md-6">
-                    <input class="form-control" id="HSKhac" name="HSKhac" type="text" value="" readonly="readonly" />
+                    <input class="form-control" id="HSKhac" name="HSKhac" type="text" value=""  />
                     <span class="field-validation-valid" data-valmsg-for="FileZipDinhKem" data-valmsg-replace="true"></span>
 
                 </div>
